--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="mainColor">#2D4263</color>
+    <color name="mainColor2">#4F74AD</color>
+    <color name="secondColor">#C84B31</color>
+    <color name="thirdColor">#191919</color>
+    <color name="fourthColor">#ECDBBA</color>
+    <color name="grey">#EFECEC</color>
+    <color name="red">#C10202</color>
+    <color name="product_item_background">#FCFFE7</color>
 </resources>
