--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/my_nav">
+    android:id="@+id/my_nav"
+    app:startDestination="@id/splashFragment">
 
+    <fragment
+        android:id="@+id/splashFragment"
+        android:name="com.hamtary.myapplication.ui.features.splash.SplashFragment"
+        android:label="SplashFragment" >
+        <action
+            android:id="@+id/action_splashFragment_to_listOfItemsFragment"
+            app:destination="@id/listOfItemsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/listOfItemsFragment"
+        android:name="com.hamtary.myapplication.ui.features.listOfItems.ListOfItemsFragment"
+        android:label="ListOfItemsFragment" />
 </navigation>
