--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="purple_200">#33A02C</color>
+    <color name="purple_500">#33A02C</color>
+    <color name="purple_700">#33A02C</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="darkGreen">#222323</color>
+    <color name="green1">#51AE37</color>
+    <color name="green2">#74B954</color>
+    <color name="green3">#33A02C</color>
+    <color name="grey">#777777</color>
+    <color name="grey1">#A3A3A3</color>
+    <color name="lightGrey">#E4E4E4</color>
+    <color name="red">#C42D47</color>
+    <color name="orange">#FB8917</color>
+    <color name="yellow">#FFD506</color>
 </resources>
